test: making the test correctly unbind afterward + cleaning these a bit.